intro: channels & edit channel section itself

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -191,7 +191,7 @@ labelfont={bf}
 
 
 \newpage
-\tableofcontents
+%\tableofcontents
 
 
 %--------------------------------------------------------------------
@@ -219,34 +219,32 @@ also deals with an issue that lies at the core of the discussion of the future o
 developed countries; that is, the location of large-scale events in central cities that bring
 prosperity but also temporary increases in contagion, congestion and crime" from MPS(2018)
 
+
+
 \newpage
 % STRATEGY & DATA
-The aim of this paper is to undertake an in-depth examination of the effects that public mass events exert on criminal behavior. More specifically, the impact of soccer games of the first three leagues of the German football league systems is investigated. To get at the impact of soccer matches on violent behavior I employ a generalized difference-in-differences approach that exploits the plausibly random variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while additionally accounting for other possible confounding variation coming from weather and holidays. In order to use the time series and cross-sectional variation, I construct a panel at the municipality-day level. I collect and match data from various sources. First, the time and location of all games in the first three leagues are obtained via web-scraping. Second, the main outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the federal level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and to build the outcome variable. 
+The aim of this paper is to undertake an in-depth examination of the effects that public mass events exert on criminal behavior. More specifically, the impact of soccer games of the first three leagues of the German football league systems is investigated. To get at the impact of soccer matches on violent behavior I employ a generalized difference-in-differences approach that exploits the plausibly random variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while additionally accounting for other possible confounding variation coming from weather and holidays. In order to use the time series and cross-sectional variation, I construct a panel at the municipality-day level. I collect and match data from various sources to exploit 4,461 football games over the period from 2011-2015. First, the time and location of all games in the first three leagues are obtained via web-scraping. Second, the main outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the federal level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and to build the outcome variable. 
 
 
 
 % findings
-My results allow me to characterize in full the impact of football matches on criminal behavior in the top three divisions of German professional soccer.
+My results allow me to characterize in full the impact of football matches on criminal behavior in the top three divisions of German professional soccer. I find significant and robust evidence that football matches leads to an increase in the rate of physical assaults. A home game increases on average the assault rate by 21.5\%. The effects are almost entirely driven my males and are strongest for the age group 18-29 years. Besides, the effects are driven by victims with no prior relationship to the suspect and `successful' executions (i.e. no attempts). Assaults on police officers on duty account for 16 percent of the baseline effect found on the entire sample. I find no evidence that the effects of soccer games on assaults are offset by reductions of assaults on days adjacent to the matchday or in nearby areas. The focus on home games in the empirical framework does not pose a threat to the identification scheme, as away games do not change the level of physical assaults in the home district.
 
 
 
 % channels 
+There are a couple of theories rationalizing spectator violence. For instance, the frustration-aggression hypothesis proposed by \cite{dollard1939frustration}, which relates self-esteem to the outcomes of the game. Another prominent theory is the idea of social learning, in which spectators mimic the behavior displayed on the pitch \citep{bandura1973aggression, bandura2007social}. In my analysis, I test whether the frustration-aggression hypothesis can serve as an explanation for why there are more physical assaults. To do so I use emotional cues from either emotionally unsettling events during the game or when game outcomes do not align with pregame expectations. In both cases, there is no evidence that would support the frustration-aggression hypothesis. In the second step, I use game and team prominence as potential channels. I find a three times higher impact on the rate of physical assaults during rival matches. This higher effect can be associated with mutual dislike of opposing fan groups or by the social learning theory as rival matches exhibit increased game intensity on the pitch. Furthermore, I find larger effects for the highest tier of the league system, which attracts the most people. Ultimately, I cannot pinpoint the one channel at play, but there is evidence that spectators mimic players' behavior, they select into specific matches, and eventually a mechanic effect described by more people present. 
 
-% mechanism
-		
-		
-		
-		
-\bigskip		
+
+				
 % back of envelope calculations
-Back-of-the envelope calculations based on my estimates indicate that the crime effects of football games are substantial. For example, soccer games in the first three leagues of the German Football league system explain 17.7 percent of the assault reports and lead to 18,770 additional assaults in the soccer season of 2014/15.\footnote{These calculations are based on an estimated reduction in assaults per million population per day, 335 days of the football season, and a population of 20,93 million in the affected regions. The number of prevented assaults for the season 2014/15 is: $2.677 \times 335 \times \frac{20,930,000}{1,000,000} = 18,770.$} \cite{glaubitz2016kostet} estimate the social cost of an assault at 5,067 euros (in 2020 prices), this implies an annual social cost of 95 million euros.\footnote{The costs of assaults vary greatly around the globe. In the US, the social costs of an assault range from 17,300 to 68,000 euros \citep{miller1996victim,cohen2004willingness}. In New Zealand the estimated social costs are 6,400 euros \citep{roper2006estimating}, and in GB the estimated costs are 2,300 euros \citep{dubourg2005economic}. All costs are in 2014 prices.}
+Back-of-the envelope calculations based on my estimates indicate that the crime effects of football games are substantial. For example, soccer games in the first three leagues of the German Football league system explain 17.7 percent of the assault reports and lead to 18,770 additional assaults in the soccer season of 2014/15.\footnote{These calculations are based on an estimated reduction in assaults per million population per day, 335 days of the football season, and a population of 20,93 million in the affected regions. The number of prevented assaults for the season 2014/15 is: $2.677 \times 335 \times \frac{20,930,000}{1,000,000} = 18,770.$} \cite{glaubitz2016kostet} estimate the social cost of an assault at 5,067 euros (in 2020 prices), this implies an annual social cost of 95 million euros.\footnote{The estimated social costs by \cite{glaubitz2016kostet} are conservative compare to other estimates from around the globe. In the US, the social costs of an assault range from 17,300 to 68,000 euros \citep{miller1996victim,cohen2004willingness}. In New Zealand the social costs are estimated at 6,400 euros \citep{roper2006estimating}, and in GB the estimated costs are 2,300 euros \citep{dubourg2005economic}. All costs are in 2014 prices.}
 	
 
 
 % Literature
-This paper complements the literature on sport events and their effects on different dimensions of crime. Studies in the US American context often use offense reports from the National Incident Based Reporting System to investigate the impact of American (college) football games on crime. \cite{rees2009college} exploit within agency variation to study the effects of Division I-A college American football games on various offense categories for the years 2000-2005.\footnote{Almost all of the following studies exploit within law enforcement agency variation over time while controlling for weather, holidays and other sources of heterogeneity across time.} They find that assaults, vandalism, arrests for disorderly conduct and alcohol-related offenses increase in hosting municipalities on game days. More sizable effects are associated with upset game outcomes, defined as when lower ranked teams win over better ranked teams. The effects for away games are not significantly different from zero. \cite{lindo2018college} examine the effect of college party culture surrounding Division 1 American football games on sexual assaults. They show that the daily reports of rape victimization among 17-24-year-old women increase by 28 percent on games days. The effects are larger for home games, prominent matches and for teams playing in the better ranked subdivision of Division 1. Furthermore, they show that game outcomes matter: upset wins increase rape victimization strongly. \cite{card2011family} analyze the impact of emotionally unsettling events associated with wins and losses of professional American football teams on family violence for the years 1995-2006. They find an increase of intimate partner violence by ten percent in the event of upset losses (when the home team was expected to win). There are no effects for upset wins or when the game expectations are too close. This suggests an asymmetry of the gain-loss utility function. The effects of male-on-female intimate partner violence are pronounced around the end of the game and are larger for more prominent games. In the European context, researcher focus on football matches to estimate the effect of large scale sport events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data obtained from the Metropolitan Crime Statistics System. His results show that property crimes increase (fall) by 4 percent (3 percent) for every extra 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches in Barcelona on criminal behavior. They match reports on registered crime in the city of Barcelona (2007-2011) with footballl matches played by the Football Club Barcelona (FCB) to see whether the games displace criminal activities temporally. They exploit a panel approach in which they compare crime for the same time window on the same weekday, with and without FCB games. Their results indicate temporal displacements for criminal activities of thefts, criminal damage, robberies and gender violence. Moreover, instances of gender violence increase after home defeats. In a follow-up study \cite{montolio2019measuring} investigate the spatial dimensions of the crime externalities stemming from football games. By drawing on the geocoded crime data for the city of Barcelona they run exploratory spatial data analysis and spatial regressions at the census tract level. Their findings show increased levels of thefts (mainly pickpocketing) across the entire city in the event of a home game. The impact is larger for regions in close proximity to the stadium. During away games, by contrast, the number of thefts around the stadium are relatively smaller. The effects of soccer matches on assaults are analogously to thefts. In particular, they find a displacement effect of violent fans to areas close to the stadium on days with home matches.
+This paper complements the literature on sport events and their effects on different dimensions of crime. Studies in the US American context often use offense reports from the National Incident Based Reporting System to investigate the impact of American (college) football games on crime. \cite{rees2009college} exploit within agency variation to study the effects of Division I-A college American football games on various offense categories for the years 2000-2005.\footnote{Almost all of the following studies exploit within law enforcement agency variation over time while controlling for weather, holidays and other sources of heterogeneity across time.} They find that assaults, vandalism, arrests for disorderly conduct and alcohol-related offenses increase in hosting municipalities on game days. More sizable effects are associated with upset game outcomes, defined as when lower ranked teams win over better ranked teams. The effects for away games are not significantly different from zero. \cite{lindo2018college} examine the effect of college party culture surrounding Division 1 American football games on sexual assaults. They show that the daily reports of rape victimization among 17-24-year-old women increase by 28 percent on games days. The effects are larger for home games, prominent matches and for teams playing in the better ranked subdivision of Division 1. Furthermore, they show that game outcomes matter: upset wins increase rape victimization strongly. \cite{card2011family} analyze the impact of emotionally unsettling events associated with wins and losses of professional American football teams on family violence for the years 1995-2006. They find an increase of intimate partner violence by ten percent in the event of upset losses (when the home team was expected to win). There are no effects for upset wins or when the game expectations are too close. This suggests an asymmetry of the gain-loss utility function. The effects of male-on-female intimate partner violence are pronounced around the end of the game and are larger for more prominent games. In the European context, researcher focus on football matches to estimate the effect of large scale sport events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data obtained from the Metropolitan Crime Statistics System. His results show that property crimes increase (fall) by 4 percent (3 percent) for every extra 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches in Barcelona on criminal behavior. They match reports on registered crime in the city of Barcelona (2007-2011) with football matches played by the Football Club Barcelona (FCB) to see whether the games displace criminal activities temporally. They exploit a panel approach in which they compare crime for the same time window on the same weekday, with and without FCB games. Their results indicate temporal displacements for criminal activities of thefts, criminal damage, robberies and gender violence. Moreover, instances of gender violence increase after home defeats. In a follow-up study \cite{montolio2019measuring} investigate the spatial dimensions of the crime externalities stemming from football games. By drawing on the geocoded crime data for the city of Barcelona they run exploratory spatial data analysis and spatial regressions at the census tract level. Their findings show increased levels of thefts (mainly pickpocketing) across the entire city in the event of a home game. The impact is larger for regions in close proximity to the stadium. During away games, by contrast, the number of thefts around the stadium are relatively smaller. The effects of soccer matches on assaults are analogously to thefts. In particular, they find a displacement effect of violent fans to areas close to the stadium on days with home matches.
 %\footnote{In addition to the papers presented in this section, other noteworthy studies in that strand of research are: \cite{kalist2016national}.}
-
 
 
 	
@@ -255,9 +253,13 @@ This paper complements the literature on sport events and their effects on diffe
 - not just one city (like Barcelona): identify large effects for many instances in the league with the most spectators
 - heterogeneity in many dimensions
 - channels (not so much emotional cues, but people want to escalate during specific games)
+- my findings are in contrast to other studies in terms of effects during upsetting events, no frustration-aggression hypothesis, specific events -> selection into specific matches to live out violent fantasies
+
+
 
 
 % roadmap
+The remainder of the paper is structured as follows. The next section provides information about football games and how they are associated with violent spectator behavior. Section \ref{sec_soc_ext:empirical_strategy} contains a description of the empirical framework. Section \ref{sec_soc_ext:data} explains the data and variables. Section \ref{sec_soc_ext:results} reports results, validity checks, a discussion on potential channels, and robustness tests. Section \ref{sec_soc_ext:conclusion} concludes.
 
 
 
@@ -266,12 +268,6 @@ This paper complements the literature on sport events and their effects on diffe
 
 
 
-
-
-
-
-
-my findings are in contrast to other studies in terms of effects during upsetting events, no frustration-aggression hypothesis, specific events -> selection into specific matches to live out violent fantasies
 
 %--------------------------------------------------------------------
 % BACKGROUND
@@ -301,7 +297,7 @@ There are a couple of theories rationalizing spectator violence.\footnote{Theore
 
 
 % THE ROLE OF ALCOHOL
-Alcohol plays a crucial role in the context of spectator violence in German football stadiums. \cite{cook2013virtuous} describes the pharmacological effects of drinking alcohol on aggression and cognitive functioning. With drinking comes a loss of inhibition and impairments of judgment. Furthermore, participants of experiments have been found to show more aggressive behavior after drinking. The 2018 edition of the \citeauthor{PCS2018} specifies that more than every fourth assault (26.2\%) was committed under the influence of alcohol. While some countries banned alcoholic drinks within the premises (e.g. Brasil since 2003), the rules in German stadiums are somewhat ambiguous. The DFB's security guidelines stipulate that the sale of alcoholic beverages is forbidden before and during games in the stadium. Nevertheless, with the approval of the responsible local security organs, the hosting clubs may, on their own authority, deviate from the regulations. Only in the case of high risk games, the clubs are urged to adhere to the ban.\footnote{For details, please refer to: \href{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}.} The clubs, however, have a strong incentive to deviate from the ban as more than one sixth (538 million Euros in the season of 2017/18) of the `Bundesliga' club's revenues comes through earnings on the matchday (e.g. tickets and catering) and the sale of alcoholic drinks contributes to that amount substantially \citep{deloitte2019report}. For this reason, alcohol and the potential side effects are very present in German football arenas.
+Alcohol plays a crucial role in the context of spectator violence in German football stadiums. \cite{cook2013virtuous} describes the pharmacological effects of drinking alcohol on aggression and cognitive functioning. With drinking comes a loss of inhibition and impairments of judgment. Furthermore, participants of experiments have been found to show more aggressive behavior after drinking. The 2018 edition of the \citeauthor{PCS2018} specifies that more than every fourth assault (26.2\%) was committed under the influence of alcohol. While some countries banned alcoholic drinks within the premises (e.g. Brazil since 2003), the rules in German stadiums are somewhat ambiguous. The DFB's security guidelines stipulate that the sale of alcoholic beverages is forbidden before and during games in the stadium. Nevertheless, with the approval of the responsible local security organs, the hosting clubs may, on their own authority, deviate from the regulations. Only in the case of high risk games, the clubs are urged to adhere to the ban.\footnote{For details, please refer to: \href{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}.} The clubs, however, have a strong incentive to deviate from the ban as more than one sixth (538 million Euros in the season of 2017/18) of the `Bundesliga' club's revenues comes through earnings on the matchday (e.g. tickets and catering) and the sale of alcoholic drinks contributes to that amount substantially \citep{deloitte2019report}. For this reason, alcohol and the potential side effects are very present in German football arenas.
 % any data on how much is consumed? https://www.news.de/sport/855220143/schalke-hat-die-durstigsten-fans/1/
 % Statista survey: 56 \% of respondents of a panel survey were in favor of banning alcohol from football stadiums, 35\% defended the right to drink alcohol in football stadiums: https://de.statista.com/statistik/daten/studie/548802/umfrage/verbot-von-alkohol-in-fussballstadien/
 
@@ -330,7 +326,7 @@ $\text{Gameday}_{rdmy}$ is a binary variable equal to unity when a home games ta
 
 
 % displacement effects - temporal & spatial
-The implicit assumption to interpret the parameter of interest $\beta$ as the causal effect of a home game on violent behavior, is that the location and the time of a soccer match is orthogonal to the number of assaults, conditional on the covariates. However, displacement effects may pose a threat to identification. On the one hand, this refers to spatial displacement effects, which may occur when (violence-prone) populations come from distant regions to the game. On the other hand, this includes temporal displacement effects, which happen when assaults from neighbouring days are shifted to the game day. In both cases, the parameter would overestimate the impact of a soccer match on violent behavior as the offense would would have been committed anyway, but just another time or at another place. To rule out the possibility that displacement effects pose a threat to the validity of the identification strategy, I investigate the effect of soccer games on neighboring regions and on days surrounding game days. I find that the main results, an increase in violent behavior due to soccer games, are not neutralized by decreases in adjacent regions or on days surrounding game days.
+The implicit assumption to interpret the parameter of interest $\beta$ as the causal effect of a home game on violent behavior, is that the location and the time of a soccer match is orthogonal to the number of assaults, conditional on the covariates. However, displacement effects may pose a threat to identification. On the one hand, this refers to spatial displacement effects, which may occur when (violence-prone) populations come from distant regions to the game. On the other hand, this includes temporal displacement effects, which happen when assaults from neighboring days are shifted to the game day. In both cases, the parameter would overestimate the impact of a soccer match on violent behavior as the offense would would have been committed anyway, but just another time or at another place. To rule out the possibility that displacement effects pose a threat to the validity of the identification strategy, I investigate the effect of soccer games on neighboring regions and on days surrounding game days. I find that the main results, an increase in violent behavior due to soccer games, are not neutralized by decreases in adjacent regions or on days surrounding game days.
 
 
 % control group problem - away games
@@ -461,7 +457,7 @@ In the first step, I consider emotional cues as potential channels of how soccer
 
 
 % game/team prominence (rivals & league)
-Second, I use information about game and team prominence as potential channels. For many sport fans, the affection for the own soccer team plays a central role \citep{wann1993sports}. Almost as important as the passion for the own team is the cultivation of animosities against rivals. Often resentments and hatred can translate into violent actions \citep{nassauer2011hate}. In order to test the hypothesis that the additional assaults are the result of feelings of dislike, I compare the impact of matches in which known rival teams are playing against each other to regular matches. To answer this question, the game day indicator of equation \ref{eq_soc_ext:model} is replaced by an interaction with a dummy variable that equals one for rival matches.\footnote{Appendix Table \ref{tab_soc_ext:prominent_games_derbies} gives an overview of rival matches.} The estimates are shown in columns 1 and 2 of Table \ref{tab_soc_ext:reg_fe_assrate_prominent_games}. Games that are classified as rival matches lead to an average increase of 8.320 assaults per million population. This corresponds to more than three times the baseline effect. Although the standard errors are relatively large, as only 2.5\% of the games are classified as rival matches, the effect is significantly different from regular matches. Next to the explanation of mutual dislike of opposing fan groups, it could be the mere prominence of teams/games that attract more (violent) people. As shown in Figure \ref{fig_soc_ext:descriptives_matches_time_attendance}, attendance varies substantially across the tiers of the German football league system. Columns 3-5 shows the effect of games by the league in which the teams are playing. The largest effect is in the highest tier, the Bundesliga, in which a game leads to a rise in the assault rate by, on average, 3.530 assaults per million population. The impact of matches from the first league are significantly larger than the effect of matches from the other two leagues.
+Second, I use information about game and team prominence as potential channels. For many sport fans, the affection for the own soccer team plays a central role \citep{wann1993sports}. Almost as important as the passion for the own team is the cultivation of animosities against rivals. Often resentments and hatred can translate into violent actions \citep{nassauer2011hate}. In order to test the hypothesis that the additional assaults are the result of feelings of dislike, I compare the impact of matches in which known rival teams are playing against each other to regular matches. To answer this question, the game day indicator of equation \ref{eq_soc_ext:model} is replaced by an interaction with a dummy variable that equals one for rival matches.\footnote{Appendix Table \ref{tab_soc_ext:prominent_games_derbies} gives an overview of rival matches.} The estimates are shown in columns 1 and 2 of Table \ref{tab_soc_ext:reg_fe_assrate_prominent_games}. Games that are classified as rival matches lead to an average increase of 8.320 assaults per million population. This corresponds to more than three times the baseline effect. Although the standard errors are relatively large, as only 2.5\% of the games are classified as rival matches, the effect is significantly different from regular matches. The higher rate of physical assaults during rival matches could also be rationalized by the social learning theory, in which spectators mimic the behavior displayed on the pitch. For instance, the number of cards awarded is significantly higher in rival matches.\footnote{The number of cards in derby matches is 4.324\ (s.e.=0.174), while for regular matches the number of issued cards is 3.906 (s.e.=0.029).} Next to the explanation of mutual dislike of opposing fan groups or social learning, it could be the mere prominence of teams/games that attract more (violent) people. As shown in Figure \ref{fig_soc_ext:descriptives_matches_time_attendance}, attendance varies substantially across the tiers of the German football league system. Columns 3-5 shows the effect of games by the league in which the teams are playing. The largest effect is in the highest tier, the Bundesliga, in which a game leads to a rise in the assault rate by, on average, 3.530 assaults per million population. The impact of matches from the first league are significantly larger than the effect of matches from the other two leagues.
 Summing up, there is evidence that the prominence of games are a crucial determinant for the size of the effect of soccer matches on the assault rate, where rival matches and games in the top league lead to more assaults.
 
 
