extension previous literature

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -179,9 +179,9 @@ labelfont={bf}
 \setcounter{page}{0}
 % \tableofcontents
 \newpage
-\setcounter{page}{1}
-\maketitle
 
+\maketitle
+\thispagestyle{empty}
 
 \renewcommand{\abstractname}{\vspace{-\baselineskip}} % GET RID OF ABSTRACT TITLE
 \begin{abstract}\noindent 
@@ -190,8 +190,8 @@ labelfont={bf}
 \end{abstract}
 
 
-\newpage
-%\tableofcontents
+
+
 
 
 %--------------------------------------------------------------------
@@ -228,7 +228,7 @@ The aim of this paper is to undertake an in-depth examination of the effects tha
 
 
 % findings
-My results allow me to characterize in full the impact of football matches on criminal behavior in the top three divisions of German professional soccer. I find significant and robust evidence that football matches leads to an increase in the rate of physical assaults. A home game increases on average the assault rate by 21.5\%. The effects are almost entirely driven my males and are strongest for the age group 18-29 years. Besides, the effects are driven by victims with no prior relationship to the suspect and `successful' executions (i.e. no attempts). Assaults on police officers on duty account for 16 percent of the baseline effect found on the entire sample. I find no evidence that the effects of soccer games on assaults are offset by reductions of assaults on days adjacent to the matchday or in nearby areas. The focus on home games in the empirical framework does not pose a threat to the identification scheme, as away games do not change the level of physical assaults in the home district.
+I find significant and robust evidence that football matches leads to an increase in the rate of physical assaults. A home game increases on average the assault rate by 21.5\%. The effects are almost entirely driven my males and are strongest for the age group 18-29 years. Besides, the effects are driven by victims with no prior relationship to the suspect and `successful' executions (i.e. no attempts). Assaults on police officers on duty account for 16 percent of the baseline effect found on the entire sample. I find no evidence that the effects of soccer games on assaults are offset by reductions of assaults on days adjacent to the matchday or in nearby areas. The focus on home games in the empirical framework does not pose a threat to the identification scheme, as away games do not change the level of physical assaults in the home district.
 
 
 
@@ -250,19 +250,14 @@ This paper complements the literature on sport events and their effects on diffe
 	
 	
 % extension literature
-- not just one city (like Barcelona): identify large effects for many instances in the league with the most spectators
-- heterogeneity in many dimensions
-- channels (not so much emotional cues, but people want to escalate during specific games)
-- my findings are in contrast to other studies in terms of effects during upsetting events, no frustration-aggression hypothesis, specific events -> selection into specific matches to live out violent fantasies
+The paper complements previous literature on many dimensions. I assemble a unique data set from various sources in order to characterize in full the impact of football matches on criminal behavior in the top three divisions of German professional soccer. In addition to the overall effect, I show heterogeneous effects by victim and crime characteristics. When investigating channels, I find no support for the frustration-aggression hypothesis, but evidence for the social learning theory and a selection story in which violent fans self-select into specific matches.
+
 
 
 
 
 % roadmap
 The remainder of the paper is structured as follows. The next section provides information about football games and how they are associated with violent spectator behavior. Section \ref{sec_soc_ext:empirical_strategy} contains a description of the empirical framework. Section \ref{sec_soc_ext:data} explains the data and variables. Section \ref{sec_soc_ext:results} reports results, validity checks, a discussion on potential channels, and robustness tests. Section \ref{sec_soc_ext:conclusion} concludes.
-
-
-
 
 
 
