--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -124,6 +124,8 @@ labelfont={bf}
 \definecolor{darkblue}{rgb}{0.0,0.0,0.6}
 \newcommand\natalia[1]{\textcolor{orange}{#1}}
 
+\usepackage{lettrine} % makes first letter large
+
 % CAPTIAL LETTERS FOR SECTION CAPTIONS
 %\usepackage{sectsty}
 %\sectionfont{\normalfont\scshape\centering\textbf}
@@ -201,32 +203,19 @@ labelfont={bf}
 % INTRODUCTION
 %--------------------------------------------------------------------
 
+\vspace{2 em}
 %\section{Introduction}\label{sec_soc_ext:introduction}
 
-\vspace{4 em}
-football is synonymous with soccer 
+
 
 % introductory paragraph
-violent fan behavior pervasive aspect 
-- legal dispute between federal states and DFL about reimbursement of costs for high risk games
-	* develop idea of external cost
-
-- simultaneously very prominent industry w/ large revenues and attendance rates
-
-
-- \cite{zis14_15}: 2.234.671 man hours of the State and Federal Police for immediate accomplishment of operations in season 2014/15
-
-"Therefore, this paper not only focuses on an event, a football match, where social
-interactions (due to agglomeration and/or emotion) can be seen to be prominent, but
-also deals with an issue that lies at the core of the discussion of the future of cities in
-developed countries; that is, the location of large-scale events in central cities that bring
-prosperity but also temporary increases in contagion, congestion and crime" from MPS(2018)
+\lettrine[lines=2,nindent=0pt]{\color{darkgray}\textbf{F}}{ootball} has grown to be a prominent industry.\footnote{Football is synonymous with soccer.} Its enduring popularity is reflected by high attendance rates and large revenues. For instance, the `Bundesliga', the German top league, is a major reason for public mass gatherings and had in the season 2017/18 with 42,700 spectators the highest average attendance per match across all European leagues. Also economically speaking, football is synonymous with big business as the `Bundesliga' ranges on second place in Europe with generated revenues of 3.17 billion euros \citep{deloitte2019report}. With such a high attractiveness, the matches of the football industry generate external effects in many dimensions. On the positive side, there are higher expenditures for consumption and ultimately increased local tax revenues. On the negative side, there occur air and noise pollution, higher frequency of accidents, among others. Violent fan behavior is a particularly pervasive aspect in this context and affects individuals' health, the penal system and the police. In the season 2017/18, the State and Federal Police accumulated over 2.11 million man hours to guarantee the spectators' safety \citep{zis17_18}. There has been a widely noticed legal dispute between the Federal State of Bremen and the German Football League (DFL) about the reimbursement of costs for high risk games, in which the \cite{fac_2019} declared the charges imposed by Bremen as legitimate. This study does not only focus on mass gatherings, football matches, where social interactions lead to violence, but also deals with the question that is at the heart of the discussion of whether the negative externalities of football games that bring so much prosperity should be absorbed. 
 
 
 
-\newpage
+
 % STRATEGY & DATA
-The aim of this paper is to undertake an in-depth examination of the effects that public mass events exert on criminal behavior. More specifically, the impact of soccer games of the first three leagues of the German football league systems is investigated. To get at the impact of soccer matches on violent behavior I employ a generalized difference-in-differences approach that exploits the plausibly random variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while additionally accounting for other possible confounding variation coming from weather and holidays. In order to use the time series and cross-sectional variation, I construct a panel at the municipality-day level. I collect and match data from various sources to exploit 4,461 football games over the period from 2011-2015. First, the time and location of all games in the first three leagues are obtained via web-scraping. Second, the main outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the federal level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and to build the outcome variable. 
+The aim of this paper is to undertake an in-depth examination of the effects that public mass gatherings exert on criminal behavior. More specifically, the impact of soccer games of the first three leagues of the German football league systems is investigated. To get at the impact of soccer matches on violent behavior I employ a generalized difference-in-differences approach that exploits the plausibly random variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while additionally accounting for other possible confounding variation coming from weather and holidays. In order to use the time series and cross-sectional variation, I construct a panel at the municipality-day level. I collect and match data from various sources to exploit 4,461 football games over the period from 2011-2015. First, the time and location of all games in the first three leagues are obtained via web-scraping. Second, the main outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the federal level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and to build the outcome variable. 
 
 
 
@@ -285,7 +274,7 @@ The three full professional divisions of the German football league system are h
 \subsection{Football and Violent Crime}
 
 % ULTRAS & HOOLIGANS
-Spectator violence has a long tradition in the environment of professional football. From the change of terms for soccer fans you can see that spectator behavior underwent quite a transformation \citep{pilz2005kuttenfan}. In the 1960s and 1970s, the peaceful fan base was specified as camp-followers, while one decade later the first problems of spectator violence arose with the presence of `soccer rowdies'. In the 1980s, spectator violence was particularly omnipresent with the hooligans movement. Since the end of the 1990s, a new group appeared in the stadiums, the `Ultras'. Originated in Italy, the `Ultras' have committed themselves to fight against the commercialization of football and to revitalize traditional football culture. Over the last years, the number of violent fans has been increasing. The police differentiates between three types of football fans. Category A consists of peaceful fans, category B includes violence-prone fans, and category C contains fans that actively seek violence (violent criminals). Originally, the `Ultras' could be located mostly in category A and sporadically in category B. Recently, however, a substantial share of the `Ultras' must be classified as members of categories B and C. For instance, the \cite{zis14_15} identified 13.455 individuals belonging to either violence-prone or violence-seeking fans in the top three leagues for the season 2014/15. With more potential agitators, police officers report more aggressiveness directed against themselves \citep{feltes2010fussballgewalt}. Yet, it is not only the problem of having more violent fans, but also that the event character of violence during football games is on the rise \citep{pilz2005kuttenfan}. Violent actions are increasingly less connected with the events on the pitch. In fact, violence serves as an opportunity for identification in the quest for one's identity. Some violent fans find self-assertion by joining forces with like-minded individuals and discover their own strength. The question is how to address the challenges coming from the `hooligans' and `Ultras'. \cite{poutvaara2009police} investigate the impact of counter-hooliganism policy in the Swedish context. They find that the reallocation of the Sport Intelligence and Tactical Unit to other activities was accompanied by increases in violent crime by hooligans. \cite{feltes2010fussballgewalt} emphasize the concept of `balanced policing', which acknowledges that risks coming from the spectators are dynamic and require quick responses to either escalate or deescalate.\footnote{Depending on which types of violent fans the police is facing, the officers have to adjust their behavior accordingly \citep{feltes2010fussballgewalt}. On the one hand, hooligans require a zero tolerance policy and any absence of drastic measures is seen as an invitation to live out violent desires. On the other hand, Ultras should be given some leeway to allow for self-regulation.} 
+Spectator violence has a long tradition in the environment of professional football. From the change of terms for soccer fans you can see that spectator behavior underwent quite a transformation \citep{pilz2005kuttenfan}. In the 1960s and 1970s, the peaceful fan base was specified as camp-followers, while one decade later the first problems of spectator violence arose with the presence of `soccer rowdies'. In the 1980s, spectator violence was particularly omnipresent with the hooligans movement. Since the end of the 1990s, a new group appeared in the stadiums, the `Ultras'. Originated in Italy, the `Ultras' have committed themselves to fight against the commercialization of football and to revitalize traditional football culture. Over the last years, the number of violent fans has been increasing. The police differentiates between three types of football fans. Category A consists of peaceful fans, category B includes violence-prone fans, and category C contains fans that actively seek violence (violent criminals). Originally, the `Ultras' could be located mostly in category A and sporadically in category B. Recently, however, a substantial share of the `Ultras' must be classified as members of categories B and C. For instance, the \cite{zis17_18} identified 13.633 individuals belonging to either violence-prone or violence-seeking fans in the top three leagues for the season 2017/18. With more potential agitators, police officers report more aggressiveness directed against themselves \citep{feltes2010fussballgewalt}. Yet, it is not only the problem of having more violent fans, but also that the event character of violence during football games is on the rise \citep{pilz2005kuttenfan}. Violent actions are increasingly less connected with the events on the pitch. In fact, violence serves as an opportunity for identification in the quest for one's identity. Some violent fans find self-assertion by joining forces with like-minded individuals and discover their own strength. The question is how to address the challenges coming from the `hooligans' and `Ultras'. \cite{poutvaara2009police} investigate the impact of counter-hooliganism policy in the Swedish context. They find that the reallocation of the Sport Intelligence and Tactical Unit to other activities was accompanied by increases in violent crime by hooligans. \cite{feltes2010fussballgewalt} emphasize the concept of `balanced policing', which acknowledges that risks coming from the spectators are dynamic and require quick responses to either escalate or deescalate.\footnote{Depending on which types of violent fans the police is facing, the officers have to adjust their behavior accordingly \citep{feltes2010fussballgewalt}. On the one hand, hooligans require a zero tolerance policy and any absence of drastic measures is seen as an invitation to live out violent desires. On the other hand, Ultras should be given some leeway to allow for self-regulation.} 
 
 
 
@@ -343,7 +332,7 @@ Given the setup of the empirical approach, there could be another threat to the 
 \bigskip
 \section{Data}\label{sec_soc_ext:data} 
 % Description data
-The data set used for the analysis covers the time window 2011-2015 and contains the regions in which soccer games of the first three leagues of the German football league system take place. I combine various data sources in order to examine the impact of public mass events on criminal behavior.
+The data set used for the analysis covers the time window 2011-2015 and contains the regions in which soccer games of the first three leagues of the German football league system take place. I combine various data sources in order to examine the impact of public mass gatherings on criminal behavior.
 
 
 
@@ -1121,7 +1110,7 @@ larger effects for prominent games
 	\item break it down to hour windows: before, during, and after the game - do I see a incapacitation effect as Dahl and Della Vigna (2009)
 	\item different specification of what are the affected regions, vary radius around stadium which region is affected: at first use only region (gemeinde/Kreis) in which the stadium is located, then play around with radius.
 	\item placebo outcomes (any type that is not affected)?
-	\item control for mass events (see BHR paper)
+	\item control for mass gatherings (see BHR paper)
 \end{itemize}
 
 
